--- a/bdqn/html8/02 作业素材/作业3：美食今日推荐/css/index.css
+++ b/bdqn/html8/02 作业素材/作业3：美食今日推荐/css/index.css
@@ -20,9 +20,18 @@ section>div{
     line-height: 1.5rem;
 }
 section div:first-child>img{
-    flex: 0 0 20%;
+    flex: 0 0 25%;
 }
 .text-red{
     color: red;
+    font-size: 16px;
     font-weight: bolder;
+}
+section div:nth-of-type(2){
+    position: relative;
+}
+section div:nth-of-type(2) img:first-child+img{
+    position: absolute;
+    top: -10px;
+    left: 90px;
 }
