--- a/bdqn/html9/01 上机练习素材/练习4：QQ彩贝热销时装/css/index.css
+++ b/bdqn/html9/01 上机练习素材/练习4：QQ彩贝热销时装/css/index.css
@@ -1,4 +1,8 @@
+div{
+    box-sizing: border-box;
+}
 .content{
+    margin: 0 auto;
     display: flex;
     width: 900px;
     height: 500px;
@@ -6,14 +10,36 @@
     border:1px solid #ccc;
 }
 .content>div:first-child{
-    flex: 0 0 30%;
+    display: flex;
+    flex: 0 0 35%;
+    padding-left: 20px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.content .nr{
+    align-self: flex-start;
 }
 .content>div:last-child{
     display: flex;
     flex: auto;
     flex-wrap: wrap;
 }
-.content>div:last-child div{
+.content>div:last-child>div{
     display: flex;
     flex: 0 0 50%;
+    height: 50%;
+    justify-content: space-around;
+    align-items: center;
+    border-left: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+}
+.content>div:last-child>div>div{
+    align-self: flex-start;
+}
+.content>div img{
+    transition: all 0.5s ease-in-out;
+}
+.content>div img:hover{
+    transform: translateX(20px);
 }
